# klue

./: CMakeLists.txt  README.md
func_tests/: CMakeLists.txt  extendedvariation_x.fa  extendedvariation_y.fa  runtests.sh  snp_insertion_x.fa  snp_insertion_y.fa  snp_y.fa  snp_z.fa  test_w.fq  test_x.fq  test_y.fq
func_tests/expected_output/: dummy_1_L.fa  dummy_1_R.fa  dummy_1_V.fa  dummy_1revcomp_L.fa  dummy_2_L.fa  dummy_2_R.fa  dummy_2revcomp_V.fa
func_tests/klue_output/: extendedvariation_expected_L.fa  extendedvariation_expected_R.fa  extendedvariation_expected_V0.fa  extendedvariation_expected_V1.fa  snp_insertion_expected_V0.fa  snp_insertion_expected_V1.fa  snp_xy_expected_L.fa  snp_xy_expected_R.fa  snp_xyz_expected_L.fa  snp_xyz_expected_R.fa  snp_xyz_expected_V0.fa  snp_xyz_expected_V1.fa  snp_xyz_expected_V2.fa
src/: CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.h  KmerIndex.cpp  KmerIndex.h  ProcessReads.cpp  ProcessReads.h  StringSearch.cpp  StringSearch.h  common.h  main.cpp
